# ASCII-art

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: image_ops.hpp
libs/opencv/install/include/opencv4/opencv2/: opencv_modules.hpp
libs/opencv/install/lib/: libopencv_alphamat.4.3.0.dylib  libopencv_alphamat.4.3.dylib  libopencv_alphamat.dylib  libopencv_aruco.4.3.0.dylib  libopencv_aruco.4.3.dylib  libopencv_aruco.dylib  libopencv_bgsegm.4.3.0.dylib  libopencv_bgsegm.4.3.dylib  libopencv_bgsegm.dylib  libopencv_bioinspired.4.3.0.dylib  libopencv_bioinspired.4.3.dylib  libopencv_bioinspired.dylib  libopencv_calib3d.4.3.0.dylib  libopencv_ccalib.4.3.0.dylib  libopencv_ccalib.4.3.dylib  libopencv_ccalib.dylib  libopencv_datasets.4.3.0.dylib  libopencv_datasets.4.3.dylib  libopencv_datasets.dylib  libopencv_dnn_objdetect.4.3.0.dylib  libopencv_dnn_objdetect.4.3.dylib  libopencv_dnn_objdetect.dylib  libopencv_dnn_superres.4.3.0.dylib  libopencv_dnn_superres.4.3.dylib  libopencv_dnn_superres.dylib  libopencv_dpm.4.3.0.dylib  libopencv_dpm.4.3.dylib  libopencv_dpm.dylib  libopencv_face.4.3.0.dylib  libopencv_face.4.3.dylib  libopencv_face.dylib  libopencv_features2d.4.3.0.dylib  libopencv_flann.4.3.0.dylib  libopencv_fuzzy.4.3.0.dylib  libopencv_fuzzy.4.3.dylib  libopencv_fuzzy.dylib  libopencv_gapi.4.3.0.dylib  libopencv_hfs.4.3.0.dylib  libopencv_hfs.4.3.dylib  libopencv_hfs.dylib  (+80 more)
libs/opencv/install/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: image_ops.cpp  main.cpp
